# avans-cpp2

./: .gitignore  CMakeLists.txt  README.md
machiavelli/: CMakeLists.txt
machiavelli.xcworkspace/: contents.xcworkspacedata
machiavelli/machiavelli.xcodeproj/: project.pbxproj
machiavelli/machiavelli.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
machiavelli/resources/data/: buildings.csv  characters.csv  motd.txt
machiavelli/src/: bouwmeester.cpp  bouwmeester.hpp  building_card.cpp  building_card.hpp  card.cpp  card.hpp  card_deck.cpp  card_deck.hpp  card_deck_dialog.cpp  card_deck_dialog.hpp  card_manager.cpp  card_manager.hpp  character_action_turn.cpp  character_action_turn.hpp  character_card.cpp  character_card.hpp  character_card_factory.cpp  character_card_factory.hpp  character_iterator.cpp  character_iterator.hpp  character_pick_turn.cpp  character_pick_turn.hpp  character_setup_turn.cpp  character_setup_turn.hpp  characters.hpp  client_command.hpp  client_info.cpp  client_info.hpp  color.hpp  colors.hpp  command.cpp  command.hpp  command_builder.cpp  command_builder.hpp  command_error.cpp  command_error.hpp  command_handler.cpp  command_handler.hpp  condottiere.cpp  condottiere.hpp  (+60 more)
networking/: CMakeLists.txt
networking/include/networking/: Socket.h  logging.h
networking/networking.xcodeproj/: project.pbxproj
networking/src/: Socket.cpp  logging.cpp  throw.cpp
